--- a/src/main/resources/templates/company/promote.html
+++ b/src/main/resources/templates/company/promote.html
@@ -14,33 +14,34 @@
             <section class="content">
                 
                 <article>
-                    <iframe width="720" height="400" src="https://www.youtube.com/embed/LQzai25zk1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    <h3>cignature - AURORA</h3>
-                    <p>#엠카운트다운 EP.782 | Mnet 230202 방송</p>
+                    <iframe width="720" height="400" src="https://www.youtube.com/embed/9cpA-AhVeME" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                    <h3>Shopping - LotteOn</h3>
+                    <p>#이효리 롯데ON 홍보영상 EP.782  </p>
                 </article>
 
                 <article>
-                    <iframe width="720" height="400" src="https://www.youtube.com/embed/3cYjeHjWXZQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    <h3>TOMORROW X TOGETHER - Devil by the Window</h3>
-                    <p>Comeback Stage | #엠카운트다운 EP.782 | Mnet 230202 방송</p>
+                    <iframe width="720" height="400" src="https://www.youtube.com/embed/9JB043WL0AE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                    <h3>롯데 그룹 홍보 영상</h3>
+                    <p>Lotte Group | #롯데그룹 홍보영상 EP.782 </p>
                 </article>
 
                 <article>
-                    <iframe width="720" height="400" src="https://www.youtube.com/embed/rKTWmtwjaOk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    <h3>Lee Seung Yoon - Shelter Of Dreams</h3>
-                    <p>Comeback Stage | #엠카운트다운 EP.782 | Mnet 230202 방송</p>
+                    <iframe width="720" height="400" src="https://www.youtube.com/embed/2OGDoj7n2Lw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                    <h3>2021 롯데그룹 홍보영상 - Lotte</h3>
+                    <p>Lotte Group | #롯데그룹 홍보영상 EP.782 </p>
                 </article>
 
                 <article>
-                    <iframe width="720" height="400" src="https://www.youtube.com/embed/U1WaM8s9828" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    <h3>VIVIZ - PULL UP</h3>
-                    <p>Comeback Stage | #엠카운트다운 EP.782 | Mnet 230202 방송</p>
+                    <iframe width="720" height="400" src="https://www.youtube.com/embed/LoQ_m-CGGAQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                    <h3>2021 롯데ON 홍보영상 - Lotte</h3>
+                    <p> 롯데ON 홍보영상 EP.782  </p>
                 </article>
 
                 <article>
-                    <iframe width="720" height="400" src="https://www.youtube.com/embed/rJ35qgf-Ky8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
-                    <h3>RYU JIHYUN - Green Light</h3>
-                    <p>#엠카운트다운 EP.782 | Mnet 230202 방송</p>
+                    <iframe width="720" height="400" src="https://www.youtube.com/embed/ItcXn7W1SxE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen=""></iframe>
+                    <h3>LotteOn</h3>
+                    <p>누구나 할인받는 20% 쿠폰
+					   APP에서 L.Pay 구매 시 최대 20%적립</p>
                 </article>
 
             </section>
