--- a/src/main/resources/static/css/Cs_style.css
+++ b/src/main/resources/static/css/Cs_style.css
@@ -371,6 +371,23 @@ footer p > strong {
   text-align: center;
   box-sizing: border-box;
 }
+
+
+.btnDelete{
+	display: inline-block;
+    width: 200px;
+    height: 60px;
+    margin: 40px auto 0;
+    border: 1px solid #ccc;
+    border-radius: 34px;
+    font-size: 16px;
+    color: #000;
+    line-height: 58px;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+
 .btnList:hover {
   background-color: #f7f7f7;
 }
@@ -582,6 +599,7 @@ footer p > strong {
   font-size: 16px;
   line-height: 32px;
 }
+
 
 
 
