--- a/src/main/resources/templates/deco.html
+++ b/src/main/resources/templates/deco.html
@@ -94,7 +94,7 @@
       <main layout:fragment="content"></main>
       <footer>
         <ul>
-          <li><a href="#">회사소개</a></li>
+          <li><a th:href="@{/company/}">회사소개</a></li>
           <li><a th:href="@{/policy/buyer}">서비스이용약관</a></li>
           <li><a href="#">개인정보처리방침</a></li>
           <li><a href="#">전자금융거래약관</a></li>
