--- a/src/main/resources/static/css/Cs_style.css
+++ b/src/main/resources/static/css/Cs_style.css
@@ -592,7 +592,8 @@ footer p > strong {
   height: 100%;        
   border-bottom: 1px solid #e9e9e9;
   padding: 26px;
-  box-sizing: border-box;
+  font-size: 16px;
+  line-height: 32px;
 }
 
 #cs > .notice > .view > article > .content * {
@@ -772,6 +773,8 @@ footer p > strong {
   border-bottom: 1px solid #e9e9e9;
   padding: 26px;
   box-sizing: border-box;
+  font-size: 16px;
+  line-height: 32px;
 }
 
 #cs > .faq > .view > article > .content * {
@@ -943,6 +946,8 @@ footer p > strong {
   border-bottom: 1px solid #e9e9e9;
   padding: 26px;
   box-sizing: border-box;
+  font-size: 16px;
+  line-height: 32px;
 }
 
 #cs > .qna > .view > article > .content * {
