--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -114,10 +114,10 @@
         </main>
          <footer>
         <ul>
-          <li><a href="#">회사소개</a></li>
-          <li><a href="#">서비스이용약관</a></li>
-          <li><a href="#">개인정보처리방침</a></li>
-          <li><a href="#">전자금융거래약관</a></li>
+          <li><a th:href="@{/company/}">회사소개</a></li>
+          <li><a th:href="@{/policy/buyer}">서비스이용약관</a></li>
+          <li><a th:href="@{/policy/privacy}">개인정보처리방침</a></li>
+          <li><a th:href="@{/policy/finance}">전자금융거래약관</a></li>
         </ul>
         <div>
           <p><img src="../images/footer_logo.png" alt="로고"></p>
